--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Deploy to ECR
 
 on: 
   push:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
   build:
@@ -29,7 +29,7 @@ jobs:
       - name: Build, tag, and push MySQL image
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY_MYSQL: database-assignment2
+          ECR_REPOSITORY_MYSQL: database-project
           IMAGE_TAG: latest
         run: |
           docker build -f Dockerfile_mysql -t $ECR_REGISTRY/$ECR_REPOSITORY_MYSQL:$IMAGE_TAG .
@@ -38,7 +38,7 @@ jobs:
       - name: Build, tag, and push Web App image
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY_APP: webapp-assignment2
+          ECR_REPOSITORY_APP: webapp-project
           IMAGE_TAG: latest
         run: |
           docker build -f Dockerfile -t $ECR_REGISTRY/$ECR_REPOSITORY_APP:$IMAGE_TAG .
