--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,4 @@
-name: Deploy to ECR
-
+name: Build and Push to AWS ECR
 
 on: 
   push:
@@ -29,7 +28,7 @@ jobs:
       - name: Build, tag, and push MySQL image
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY_MYSQL: database-project
+          ECR_REPOSITORY_MYSQL: mysql-custom        # 👈 Replace with your real MySQL ECR repo name
           IMAGE_TAG: latest
         run: |
           docker build -f Dockerfile_mysql -t $ECR_REGISTRY/$ECR_REPOSITORY_MYSQL:$IMAGE_TAG .
@@ -38,7 +37,7 @@ jobs:
       - name: Build, tag, and push Web App image
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY_APP: webapp-project
+          ECR_REPOSITORY_APP: flask-app            # 👈 Replace with your real Flask app ECR repo name
           IMAGE_TAG: latest
         run: |
           docker build -f Dockerfile -t $ECR_REGISTRY/$ECR_REPOSITORY_APP:$IMAGE_TAG .
